Minecraft 1.19.0 backport